1.moisture 2.setting:add sewingline call windows

--- a/Quality/Quality/Areas/FinalInspection/CSS/FinalInspection.css
+++ b/Quality/Quality/Areas/FinalInspection/CSS/FinalInspection.css
@@ -70,6 +70,11 @@ input, select {
     height: 4vh;
 }
 
-input:not(:disabled), select:not(:disabled) {
+textarea {
+    border: 1px solid black;
+    padding:10px;
+}
+
+input:not(:disabled), select:not(:disabled), textarea:not(:disabled) {
     color: #0000ff;
 }
