--- a/Quality/Quality/Areas/FinalInspection/Views/Shared/_ForAll_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Shared/_ForAll_Layout.cshtml
@@ -18,4 +18,14 @@
         @RenderBody()
     </div>
 </div>
+<script>
+    $(function () {
+        $(window).keydown(function (event) {
+            if (event.keyCode == 13) {
+                event.preventDefault();
+                return false;
+            }
+        });
+    });
+</script>
 @RenderSection("FinalInspection_script", required: false)
